bisonFile.output
Nonterminals useless in grammar

   type


Terminals unused in grammar

   T_HEX
   T_PERCENT
   T_SEMICOLON
   T_COMMA
   T_LET
   T_IN
   T_END
   T_SKIP
   T_IF
   T_THEN
   T_ELSE
   T_FI
   T_WHILE
   T_DO
   T_READ
   T_WRITE
   T_INT
   T_DOUBLE
   T_BOOL
   T_STRING
   T_INTCONST
   T_DOUBLECONST


Rules useless in grammar

   24 type: T_INT
   25     | T_DOUBLE
   26     | T_BOOL
   27     | T_STRING


State 12 conflicts: 13 shift/reduce
State 28 conflicts: 9 shift/reduce
State 29 conflicts: 9 shift/reduce
State 30 conflicts: 9 shift/reduce
State 31 conflicts: 9 shift/reduce
State 32 conflicts: 13 shift/reduce
State 33 conflicts: 13 shift/reduce
State 34 conflicts: 13 shift/reduce
State 35 conflicts: 13 shift/reduce
State 36 conflicts: 13 shift/reduce
State 37 conflicts: 13 shift/reduce
State 38 conflicts: 13 shift/reduce
State 39 conflicts: 13 shift/reduce
State 40 conflicts: 13 shift/reduce


Grammar

    0 $accept: S $end

    1 S: S expression
    2  | /* empty */

    3 expression: constant
    4           | T_ID
    5           | T_LPAREN expression T_RPAREN
    6           | expression T_PLUS expression
    7           | expression T_MINUS expression
    8           | expression T_STAR expression
    9           | expression T_SLASH expression
   10           | expression T_ASSIGN expression
   11           | expression T_LESS expression
   12           | expression T_GREATER expression
   13           | expression T_GREATEREQ expression
   14           | expression T_LESSEQ expression
   15           | expression T_NEQ expression
   16           | expression T_AND expression
   17           | expression T_OR expression
   18           | T_NOT expression
   19           | expression T_EQ expression

   20 constant: T_DEC
   21         | T_DOU
   22         | T_BOOLCONST
   23         | T_STRCONST


Terminals, with rules where they appear

$end (0) 0
error (256)
T_ID (258) 4
T_DEC (259) 20
T_HEX (260)
T_DOU (261) 21
T_PLUS (262) 6
T_MINUS (263) 7
T_STAR (264) 8
T_SLASH (265) 9
T_PERCENT (266)
T_LESS (267) 11
T_LESSEQ (268) 14
T_GREATER (269) 12
T_GREATEREQ (270) 13
T_ASSIGN (271) 10
T_EQ (272) 19
T_NEQ (273) 15
T_AND (274) 16
T_OR (275) 17
T_NOT (276) 18
T_SEMICOLON (277)
T_COMMA (278)
T_LPAREN (279) 5
T_RPAREN (280) 5
T_LET (281)
T_IN (282)
T_END (283)
T_SKIP (284)
T_IF (285)
T_THEN (286)
T_ELSE (287)
T_FI (288)
T_WHILE (289)
T_DO (290)
T_READ (291)
T_WRITE (292)
T_INT (293)
T_DOUBLE (294)
T_BOOL (295)
T_STRING (296)
T_INTCONST (297)
T_DOUBLECONST (298)
T_BOOLCONST (299) 22
T_STRCONST (300) 23


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
S (47)
    on left: 1 2, on right: 0 1
expression (48)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19, on right:
    1 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19
constant (49)
    on left: 20 21 22 23, on right: 3


state 0

    0 $accept: . S $end

    $default  reduce using rule 2 (S)

    S  go to state 1


state 1

    0 $accept: S . $end
    1 S: S . expression

    $end         shift, and go to state 2
    T_ID         shift, and go to state 3
    T_DEC        shift, and go to state 4
    T_DOU        shift, and go to state 5
    T_NOT        shift, and go to state 6
    T_LPAREN     shift, and go to state 7
    T_BOOLCONST  shift, and go to state 8
    T_STRCONST   shift, and go to state 9

    expression  go to state 10
    constant    go to state 11


state 2

    0 $accept: S $end .

    $default  accept


state 3

    4 expression: T_ID .

    $default  reduce using rule 4 (expression)


state 4

   20 constant: T_DEC .

    $default  reduce using rule 20 (constant)


state 5

   21 constant: T_DOU .

    $default  reduce using rule 21 (constant)


state 6

   18 expression: T_NOT . expression

    T_ID         shift, and go to state 3
    T_DEC        shift, and go to state 4
    T_DOU        shift, and go to state 5
    T_NOT        shift, and go to state 6
    T_LPAREN     shift, and go to state 7
    T_BOOLCONST  shift, and go to state 8
    T_STRCONST   shift, and go to state 9

    expression  go to state 12
    constant    go to state 11


state 7

    5 expression: T_LPAREN . expression T_RPAREN

    T_ID         shift, and go to state 3
    T_DEC        shift, and go to state 4
    T_DOU        shift, and go to state 5
    T_NOT        shift, and go to state 6
    T_LPAREN     shift, and go to state 7
    T_BOOLCONST  shift, and go to state 8
    T_STRCONST   shift, and go to state 9

    expression  go to state 13
    constant    go to state 11


state 8

   22 constant: T_BOOLCONST .

    $default  reduce using rule 22 (constant)


state 9

   23 constant: T_STRCONST .

    $default  reduce using rule 23 (constant)


state 10

    1 S: S expression .
    6 expression: expression . T_PLUS expression
    7           | expression . T_MINUS expression
    8           | expression . T_STAR expression
    9           | expression . T_SLASH expression
   10           | expression . T_ASSIGN expression
   11           | expression . T_LESS expression
   12           | expression . T_GREATER expression
   13           | expression . T_GREATEREQ expression
   14           | expression . T_LESSEQ expression
   15           | expression . T_NEQ expression
   16           | expression . T_AND expression
   17           | expression . T_OR expression
   19           | expression . T_EQ expression

    T_PLUS       shift, and go to state 14
    T_MINUS      shift, and go to state 15
    T_STAR       shift, and go to state 16
    T_SLASH      shift, and go to state 17
    T_LESS       shift, and go to state 18
    T_LESSEQ     shift, and go to state 19
    T_GREATER    shift, and go to state 20
    T_GREATEREQ  shift, and go to state 21
    T_ASSIGN     shift, and go to state 22
    T_EQ         shift, and go to state 23
    T_NEQ        shift, and go to state 24
    T_AND        shift, and go to state 25
    T_OR         shift, and go to state 26

    $default  reduce using rule 1 (S)


state 11

    3 expression: constant .

    $default  reduce using rule 3 (expression)


state 12

    6 expression: expression . T_PLUS expression
    7           | expression . T_MINUS expression
    8           | expression . T_STAR expression
    9           | expression . T_SLASH expression
   10           | expression . T_ASSIGN expression
   11           | expression . T_LESS expression
   12           | expression . T_GREATER expression
   13           | expression . T_GREATEREQ expression
   14           | expression . T_LESSEQ expression
   15           | expression . T_NEQ expression
   16           | expression . T_AND expression
   17           | expression . T_OR expression
   18           | T_NOT expression .
   19           | expression . T_EQ expression

    T_PLUS       shift, and go to state 14
    T_MINUS      shift, and go to state 15
    T_STAR       shift, and go to state 16
    T_SLASH      shift, and go to state 17
    T_LESS       shift, and go to state 18
    T_LESSEQ     shift, and go to state 19
    T_GREATER    shift, and go to state 20
    T_GREATEREQ  shift, and go to state 21
    T_ASSIGN     shift, and go to state 22
    T_EQ         shift, and go to state 23
    T_NEQ        shift, and go to state 24
    T_AND        shift, and go to state 25
    T_OR         shift, and go to state 26

    T_PLUS       [reduce using rule 18 (expression)]
    T_MINUS      [reduce using rule 18 (expression)]
    T_STAR       [reduce using rule 18 (expression)]
    T_SLASH      [reduce using rule 18 (expression)]
    T_LESS       [reduce using rule 18 (expression)]
    T_LESSEQ     [reduce using rule 18 (expression)]
    T_GREATER    [reduce using rule 18 (expression)]
    T_GREATEREQ  [reduce using rule 18 (expression)]
    T_ASSIGN     [reduce using rule 18 (expression)]
    T_EQ         [reduce using rule 18 (expression)]
    T_NEQ        [reduce using rule 18 (expression)]
    T_AND        [reduce using rule 18 (expression)]
    T_OR         [reduce using rule 18 (expression)]
    $default     reduce using rule 18 (expression)


state 13

    5 expression: T_LPAREN expression . T_RPAREN
    6           | expression . T_PLUS expression
    7           | expression . T_MINUS expression
    8           | expression . T_STAR expression
    9           | expression . T_SLASH expression
   10           | expression . T_ASSIGN expression
   11           | expression . T_LESS expression
   12           | expression . T_GREATER expression
   13           | expression . T_GREATEREQ expression
   14           | expression . T_LESSEQ expression
   15           | expression . T_NEQ expression
   16           | expression . T_AND expression
   17           | expression . T_OR expression
   19           | expression . T_EQ expression

    T_PLUS       shift, and go to state 14
    T_MINUS      shift, and go to state 15
    T_STAR       shift, and go to state 16
    T_SLASH      shift, and go to state 17
    T_LESS       shift, and go to state 18
    T_LESSEQ     shift, and go to state 19
    T_GREATER    shift, and go to state 20
    T_GREATEREQ  shift, and go to state 21
    T_ASSIGN     shift, and go to state 22
    T_EQ         shift, and go to state 23
    T_NEQ        shift, and go to state 24
    T_AND        shift, and go to state 25
    T_OR         shift, and go to state 26
    T_RPAREN     shift, and go to state 27


state 14

    6 expression: expression T_PLUS . expression

    T_ID         shift, and go to state 3
    T_DEC        shift, and go to state 4
    T_DOU        shift, and go to state 5
    T_NOT        shift, and go to state 6
    T_LPAREN     shift, and go to state 7
    T_BOOLCONST  shift, and go to state 8
    T_STRCONST   shift, and go to state 9

    expression  go to state 28
    constant    go to state 11


state 15

    7 expression: expression T_MINUS . expression

    T_ID         shift, and go to state 3
    T_DEC        shift, and go to state 4
    T_DOU        shift, and go to state 5
    T_NOT        shift, and go to state 6
    T_LPAREN     shift, and go to state 7
    T_BOOLCONST  shift, and go to state 8
    T_STRCONST   shift, and go to state 9

    expression  go to state 29
    constant    go to state 11


state 16

    8 expression: expression T_STAR . expression

    T_ID         shift, and go to state 3
    T_DEC        shift, and go to state 4
    T_DOU        shift, and go to state 5
    T_NOT        shift, and go to state 6
    T_LPAREN     shift, and go to state 7
    T_BOOLCONST  shift, and go to state 8
    T_STRCONST   shift, and go to state 9

    expression  go to state 30
    constant    go to state 11


state 17

    9 expression: expression T_SLASH . expression

    T_ID         shift, and go to state 3
    T_DEC        shift, and go to state 4
    T_DOU        shift, and go to state 5
    T_NOT        shift, and go to state 6
    T_LPAREN     shift, and go to state 7
    T_BOOLCONST  shift, and go to state 8
    T_STRCONST   shift, and go to state 9

    expression  go to state 31
    constant    go to state 11


state 18

   11 expression: expression T_LESS . expression

    T_ID         shift, and go to state 3
    T_DEC        shift, and go to state 4
    T_DOU        shift, and go to state 5
    T_NOT        shift, and go to state 6
    T_LPAREN     shift, and go to state 7
    T_BOOLCONST  shift, and go to state 8
    T_STRCONST   shift, and go to state 9

    expression  go to state 32
    constant    go to state 11


state 19

   14 expression: expression T_LESSEQ . expression

    T_ID         shift, and go to state 3
    T_DEC        shift, and go to state 4
    T_DOU        shift, and go to state 5
    T_NOT        shift, and go to state 6
    T_LPAREN     shift, and go to state 7
    T_BOOLCONST  shift, and go to state 8
    T_STRCONST   shift, and go to state 9

    expression  go to state 33
    constant    go to state 11


state 20

   12 expression: expression T_GREATER . expression

    T_ID         shift, and go to state 3
    T_DEC        shift, and go to state 4
    T_DOU        shift, and go to state 5
    T_NOT        shift, and go to state 6
    T_LPAREN     shift, and go to state 7
    T_BOOLCONST  shift, and go to state 8
    T_STRCONST   shift, and go to state 9

    expression  go to state 34
    constant    go to state 11


state 21

   13 expression: expression T_GREATEREQ . expression

    T_ID         shift, and go to state 3
    T_DEC        shift, and go to state 4
    T_DOU        shift, and go to state 5
    T_NOT        shift, and go to state 6
    T_LPAREN     shift, and go to state 7
    T_BOOLCONST  shift, and go to state 8
    T_STRCONST   shift, and go to state 9

    expression  go to state 35
    constant    go to state 11


state 22

   10 expression: expression T_ASSIGN . expression

    T_ID         shift, and go to state 3
    T_DEC        shift, and go to state 4
    T_DOU        shift, and go to state 5
    T_NOT        shift, and go to state 6
    T_LPAREN     shift, and go to state 7
    T_BOOLCONST  shift, and go to state 8
    T_STRCONST   shift, and go to state 9

    expression  go to state 36
    constant    go to state 11


state 23

   19 expression: expression T_EQ . expression

    T_ID         shift, and go to state 3
    T_DEC        shift, and go to state 4
    T_DOU        shift, and go to state 5
    T_NOT        shift, and go to state 6
    T_LPAREN     shift, and go to state 7
    T_BOOLCONST  shift, and go to state 8
    T_STRCONST   shift, and go to state 9

    expression  go to state 37
    constant    go to state 11


state 24

   15 expression: expression T_NEQ . expression

    T_ID         shift, and go to state 3
    T_DEC        shift, and go to state 4
    T_DOU        shift, and go to state 5
    T_NOT        shift, and go to state 6
    T_LPAREN     shift, and go to state 7
    T_BOOLCONST  shift, and go to state 8
    T_STRCONST   shift, and go to state 9

    expression  go to state 38
    constant    go to state 11


state 25

   16 expression: expression T_AND . expression

    T_ID         shift, and go to state 3
    T_DEC        shift, and go to state 4
    T_DOU        shift, and go to state 5
    T_NOT        shift, and go to state 6
    T_LPAREN     shift, and go to state 7
    T_BOOLCONST  shift, and go to state 8
    T_STRCONST   shift, and go to state 9

    expression  go to state 39
    constant    go to state 11


state 26

   17 expression: expression T_OR . expression

    T_ID         shift, and go to state 3
    T_DEC        shift, and go to state 4
    T_DOU        shift, and go to state 5
    T_NOT        shift, and go to state 6
    T_LPAREN     shift, and go to state 7
    T_BOOLCONST  shift, and go to state 8
    T_STRCONST   shift, and go to state 9

    expression  go to state 40
    constant    go to state 11


state 27

    5 expression: T_LPAREN expression T_RPAREN .

    $default  reduce using rule 5 (expression)


state 28

    6 expression: expression . T_PLUS expression
    6           | expression T_PLUS expression .
    7           | expression . T_MINUS expression
    8           | expression . T_STAR expression
    9           | expression . T_SLASH expression
   10           | expression . T_ASSIGN expression
   11           | expression . T_LESS expression
   12           | expression . T_GREATER expression
   13           | expression . T_GREATEREQ expression
   14           | expression . T_LESSEQ expression
   15           | expression . T_NEQ expression
   16           | expression . T_AND expression
   17           | expression . T_OR expression
   19           | expression . T_EQ expression

    T_STAR       shift, and go to state 16
    T_SLASH      shift, and go to state 17
    T_LESS       shift, and go to state 18
    T_LESSEQ     shift, and go to state 19
    T_GREATER    shift, and go to state 20
    T_GREATEREQ  shift, and go to state 21
    T_ASSIGN     shift, and go to state 22
    T_EQ         shift, and go to state 23
    T_NEQ        shift, and go to state 24
    T_AND        shift, and go to state 25
    T_OR         shift, and go to state 26

    T_LESS       [reduce using rule 6 (expression)]
    T_LESSEQ     [reduce using rule 6 (expression)]
    T_GREATER    [reduce using rule 6 (expression)]
    T_GREATEREQ  [reduce using rule 6 (expression)]
    T_ASSIGN     [reduce using rule 6 (expression)]
    T_EQ         [reduce using rule 6 (expression)]
    T_NEQ        [reduce using rule 6 (expression)]
    T_AND        [reduce using rule 6 (expression)]
    T_OR         [reduce using rule 6 (expression)]
    $default     reduce using rule 6 (expression)


state 29

    6 expression: expression . T_PLUS expression
    7           | expression . T_MINUS expression
    7           | expression T_MINUS expression .
    8           | expression . T_STAR expression
    9           | expression . T_SLASH expression
   10           | expression . T_ASSIGN expression
   11           | expression . T_LESS expression
   12           | expression . T_GREATER expression
   13           | expression . T_GREATEREQ expression
   14           | expression . T_LESSEQ expression
   15           | expression . T_NEQ expression
   16           | expression . T_AND expression
   17           | expression . T_OR expression
   19           | expression . T_EQ expression

    T_STAR       shift, and go to state 16
    T_SLASH      shift, and go to state 17
    T_LESS       shift, and go to state 18
    T_LESSEQ     shift, and go to state 19
    T_GREATER    shift, and go to state 20
    T_GREATEREQ  shift, and go to state 21
    T_ASSIGN     shift, and go to state 22
    T_EQ         shift, and go to state 23
    T_NEQ        shift, and go to state 24
    T_AND        shift, and go to state 25
    T_OR         shift, and go to state 26

    T_LESS       [reduce using rule 7 (expression)]
    T_LESSEQ     [reduce using rule 7 (expression)]
    T_GREATER    [reduce using rule 7 (expression)]
    T_GREATEREQ  [reduce using rule 7 (expression)]
    T_ASSIGN     [reduce using rule 7 (expression)]
    T_EQ         [reduce using rule 7 (expression)]
    T_NEQ        [reduce using rule 7 (expression)]
    T_AND        [reduce using rule 7 (expression)]
    T_OR         [reduce using rule 7 (expression)]
    $default     reduce using rule 7 (expression)


state 30

    6 expression: expression . T_PLUS expression
    7           | expression . T_MINUS expression
    8           | expression . T_STAR expression
    8           | expression T_STAR expression .
    9           | expression . T_SLASH expression
   10           | expression . T_ASSIGN expression
   11           | expression . T_LESS expression
   12           | expression . T_GREATER expression
   13           | expression . T_GREATEREQ expression
   14           | expression . T_LESSEQ expression
   15           | expression . T_NEQ expression
   16           | expression . T_AND expression
   17           | expression . T_OR expression
   19           | expression . T_EQ expression

    T_LESS       shift, and go to state 18
    T_LESSEQ     shift, and go to state 19
    T_GREATER    shift, and go to state 20
    T_GREATEREQ  shift, and go to state 21
    T_ASSIGN     shift, and go to state 22
    T_EQ         shift, and go to state 23
    T_NEQ        shift, and go to state 24
    T_AND        shift, and go to state 25
    T_OR         shift, and go to state 26

    T_LESS       [reduce using rule 8 (expression)]
    T_LESSEQ     [reduce using rule 8 (expression)]
    T_GREATER    [reduce using rule 8 (expression)]
    T_GREATEREQ  [reduce using rule 8 (expression)]
    T_ASSIGN     [reduce using rule 8 (expression)]
    T_EQ         [reduce using rule 8 (expression)]
    T_NEQ        [reduce using rule 8 (expression)]
    T_AND        [reduce using rule 8 (expression)]
    T_OR         [reduce using rule 8 (expression)]
    $default     reduce using rule 8 (expression)


state 31

    6 expression: expression . T_PLUS expression
    7           | expression . T_MINUS expression
    8           | expression . T_STAR expression
    9           | expression . T_SLASH expression
    9           | expression T_SLASH expression .
   10           | expression . T_ASSIGN expression
   11           | expression . T_LESS expression
   12           | expression . T_GREATER expression
   13           | expression . T_GREATEREQ expression
   14           | expression . T_LESSEQ expression
   15           | expression . T_NEQ expression
   16           | expression . T_AND expression
   17           | expression . T_OR expression
   19           | expression . T_EQ expression

    T_LESS       shift, and go to state 18
    T_LESSEQ     shift, and go to state 19
    T_GREATER    shift, and go to state 20
    T_GREATEREQ  shift, and go to state 21
    T_ASSIGN     shift, and go to state 22
    T_EQ         shift, and go to state 23
    T_NEQ        shift, and go to state 24
    T_AND        shift, and go to state 25
    T_OR         shift, and go to state 26

    T_LESS       [reduce using rule 9 (expression)]
    T_LESSEQ     [reduce using rule 9 (expression)]
    T_GREATER    [reduce using rule 9 (expression)]
    T_GREATEREQ  [reduce using rule 9 (expression)]
    T_ASSIGN     [reduce using rule 9 (expression)]
    T_EQ         [reduce using rule 9 (expression)]
    T_NEQ        [reduce using rule 9 (expression)]
    T_AND        [reduce using rule 9 (expression)]
    T_OR         [reduce using rule 9 (expression)]
    $default     reduce using rule 9 (expression)


state 32

    6 expression: expression . T_PLUS expression
    7           | expression . T_MINUS expression
    8           | expression . T_STAR expression
    9           | expression . T_SLASH expression
   10           | expression . T_ASSIGN expression
   11           | expression . T_LESS expression
   11           | expression T_LESS expression .
   12           | expression . T_GREATER expression
   13           | expression . T_GREATEREQ expression
   14           | expression . T_LESSEQ expression
   15           | expression . T_NEQ expression
   16           | expression . T_AND expression
   17           | expression . T_OR expression
   19           | expression . T_EQ expression

    T_PLUS       shift, and go to state 14
    T_MINUS      shift, and go to state 15
    T_STAR       shift, and go to state 16
    T_SLASH      shift, and go to state 17
    T_LESS       shift, and go to state 18
    T_LESSEQ     shift, and go to state 19
    T_GREATER    shift, and go to state 20
    T_GREATEREQ  shift, and go to state 21
    T_ASSIGN     shift, and go to state 22
    T_EQ         shift, and go to state 23
    T_NEQ        shift, and go to state 24
    T_AND        shift, and go to state 25
    T_OR         shift, and go to state 26

    T_PLUS       [reduce using rule 11 (expression)]
    T_MINUS      [reduce using rule 11 (expression)]
    T_STAR       [reduce using rule 11 (expression)]
    T_SLASH      [reduce using rule 11 (expression)]
    T_LESS       [reduce using rule 11 (expression)]
    T_LESSEQ     [reduce using rule 11 (expression)]
    T_GREATER    [reduce using rule 11 (expression)]
    T_GREATEREQ  [reduce using rule 11 (expression)]
    T_ASSIGN     [reduce using rule 11 (expression)]
    T_EQ         [reduce using rule 11 (expression)]
    T_NEQ        [reduce using rule 11 (expression)]
    T_AND        [reduce using rule 11 (expression)]
    T_OR         [reduce using rule 11 (expression)]
    $default     reduce using rule 11 (expression)


state 33

    6 expression: expression . T_PLUS expression
    7           | expression . T_MINUS expression
    8           | expression . T_STAR expression
    9           | expression . T_SLASH expression
   10           | expression . T_ASSIGN expression
   11           | expression . T_LESS expression
   12           | expression . T_GREATER expression
   13           | expression . T_GREATEREQ expression
   14           | expression . T_LESSEQ expression
   14           | expression T_LESSEQ expression .
   15           | expression . T_NEQ expression
   16           | expression . T_AND expression
   17           | expression . T_OR expression
   19           | expression . T_EQ expression

    T_PLUS       shift, and go to state 14
    T_MINUS      shift, and go to state 15
    T_STAR       shift, and go to state 16
    T_SLASH      shift, and go to state 17
    T_LESS       shift, and go to state 18
    T_LESSEQ     shift, and go to state 19
    T_GREATER    shift, and go to state 20
    T_GREATEREQ  shift, and go to state 21
    T_ASSIGN     shift, and go to state 22
    T_EQ         shift, and go to state 23
    T_NEQ        shift, and go to state 24
    T_AND        shift, and go to state 25
    T_OR         shift, and go to state 26

    T_PLUS       [reduce using rule 14 (expression)]
    T_MINUS      [reduce using rule 14 (expression)]
    T_STAR       [reduce using rule 14 (expression)]
    T_SLASH      [reduce using rule 14 (expression)]
    T_LESS       [reduce using rule 14 (expression)]
    T_LESSEQ     [reduce using rule 14 (expression)]
    T_GREATER    [reduce using rule 14 (expression)]
    T_GREATEREQ  [reduce using rule 14 (expression)]
    T_ASSIGN     [reduce using rule 14 (expression)]
    T_EQ         [reduce using rule 14 (expression)]
    T_NEQ        [reduce using rule 14 (expression)]
    T_AND        [reduce using rule 14 (expression)]
    T_OR         [reduce using rule 14 (expression)]
    $default     reduce using rule 14 (expression)


state 34

    6 expression: expression . T_PLUS expression
    7           | expression . T_MINUS expression
    8           | expression . T_STAR expression
    9           | expression . T_SLASH expression
   10           | expression . T_ASSIGN expression
   11           | expression . T_LESS expression
   12           | expression . T_GREATER expression
   12           | expression T_GREATER expression .
   13           | expression . T_GREATEREQ expression
   14           | expression . T_LESSEQ expression
   15           | expression . T_NEQ expression
   16           | expression . T_AND expression
   17           | expression . T_OR expression
   19           | expression . T_EQ expression
